Refactoring AlbumService